<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tecq"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_tecq">


        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Secondary"
            android:alpha="0.2"/>


        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        android:layout_marginTop="-30dp"
        android:elevation="8dp"
        android:layout_marginHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textColor="@color/Primary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/instructionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_Inst"
                android:textColor="@color/textcolor"
                android:layout_marginTop="4dp"/>


            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hd_mail"
                android:textStyle="bold"
                android:textColor="@color/textcolor"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:drawableEnd="@drawable/donee"
                android:layout_marginTop="8dp"
                 />


            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hd_password"
                android:textStyle="bold"
                android:textColor="@color/textcolor"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                android:layout_marginTop="8dp"
                 />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <CheckBox
                    android:id="@+id/rememberMeCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_tilte"
                    android:textColor="@color/textcolor"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/forgotPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/Primary"/>
            </LinearLayout>


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/btn_text_login"
                android:textAllCaps="false"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/Primary"
                android:textColor="@android:color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="24dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#20000000"/>

                <TextView
                    android:id="@+id/orText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/textcolor"
                    android:layout_marginHorizontal="8dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#20000000"/>
            </LinearLayout>

             <!--icon-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/githubLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/github"/>

                <ImageView
                    android:id="@+id/facebookLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/facebook"/>

                <ImageView
                    android:id="@+id/instagramLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/instagran_icon"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>